# python-elastic

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/: config.py  logger.py  main.py
src/adapters/: esclient.py
src/adapters/routers/: document.py  healthcheck.py
src/entities/: document.py  health.py
tests/: test_app.py
tests/adapters/: conftest.py  test_esclient.py
tests/entities/: factories.py  test_document.py
